--- a/thebackstage/views/profile/profile.ejs
+++ b/thebackstage/views/profile/profile.ejs
@@ -13,9 +13,10 @@
               <h3>Local</h3>
 
                   <p>
-                      <strong>id</strong>: {{user._id}}<br>
-                      <strong>email</strong>: {{user.local.email }}<br>
-                      <strong>password</strong>: * * * *
+                      <strong>id</strong>: <%= user._id%><br>
+                      <strong>email</strong>: <%= user.local.email %><br>
+                      <strong>password</strong>: * * * *<br>
+
                   </p>
 
           </div>
