--- a/thebackstage/views/signup.ejs
+++ b/thebackstage/views/signup.ejs
@@ -5,18 +5,21 @@
       <h1> Signup</h1>
   
       <!-- show any messages that come back with authentication -->
+      <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+      <% } %>
   
-  
-      <!-- LOGIN FORM -->
+      <!-- SIGNUP FORM -->
       <form action="/signup" method="post">
           <div class="form-group">
               <label>Email</label>
               <input type="text" class="form-control" name="email">
-          </div>
+            </div>
           <div class="form-group">
               <label>Password</label>
               <input type="password" class="form-control" name="password">
-          </div>
+            </div>
+
   
           <button type="submit" class="btn btn-warning btn-lg">Signup</button>
       </form>
