--- a/thebackstage/views/profileform.ejs
+++ b/thebackstage/views/profileform.ejs
@@ -1,5 +1,6 @@
 
 <!-- PROFILE FORM -->
+
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
         <form action="/profile/form" method="post">
@@ -13,13 +14,14 @@
             </div>
             <div class="form-group">
                 <label for="exampleFormControlFile1">Profile picture</label>
-                <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                <input type="file" class="form-control-file" id="exampleFormControlFile1" name="profilepicture">
             </div>
-         
-          
-        
+            <label for="exampleFormControlFile1">Address</label>
+            <div id='geocoder' class='geocoder'></div> <br>
+            <div id="map2" style='width: 400px; height: 300px;'></div><br>
+
+
         </form>
-  
 
 
      
@@ -29,4 +31,3 @@
     </div>
 </div>
 
-<div id="map2"></div>
