--- a/thebackstage/views/index.ejs
+++ b/thebackstage/views/index.ejs
@@ -2,9 +2,9 @@
 <div class="container">
   <div class="jumbotron text-center">
         <h1> WELCOME TO THE BACKSTAGE</h1>
-        <p>Login or Register with:</p>
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
+        <p>Login or Register:</p>
+        <a href="/login" class="btn btn-default"> Login</a>
+        <a href="/signup" class="btn btn-default"> Signup</a>
  </div>    
 </div>
 
