--- a/thebackstage/views/profileform.ejs
+++ b/thebackstage/views/profileform.ejs
@@ -11,7 +11,7 @@
             </div>
             <div class="form-group">
                 <label>About me</label>
-                <textarea class="form-control" id="about" rows="5"></textarea>
+                <textarea class="form-control" id="about" rows="5" name="about"></textarea>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlFile1">Profile picture</label>
