--- a/thebackstage/views/profile.ejs
+++ b/thebackstage/views/profile.ejs
@@ -10,6 +10,7 @@
       <!-- LOCAL INFORMATION -->
       <div class="col-sm-6">
           <div class="well">
+              <img src= "/photo-storage/profilepic.png" height="320" width="320">
               <h3>Welcome <%= user.profile.username %></h3>
 
                   <p>
@@ -18,6 +19,9 @@
                       <strong>id</strong>: <%= user._id%><br>
                       <strong>email</strong>: <%= user.local.email %><br>
                       <strong>password</strong>: * * * *<br><br>
+                      <strong>country</strong>: <%= user.profile.country %><br>
+                      <strong>region</strong>: <%= user.profile.region %><br>
+                      <strong>location</strong>: <%= user.profile.address %><br><br>
                       <a href="/profile/form" class="btn btn-default btn-sm">Edit</a>
                   </p>
 
@@ -32,7 +36,7 @@
    <% if (user.profile.events.length == 0) { %>
       <div class="alert alert-danger"> 
           You are yet to join an event; Go check some cool events near you 
-          <a href="/" class="btn btn-default btn-sm">Lobby</a> 
+          <a href="/lobby" class="btn btn-default btn-sm">Lobby</a> 
       </div>
    <% } %>
   </div>
