design halway done

--- a/thebackstage/views/index.ejs
+++ b/thebackstage/views/index.ejs
@@ -1,10 +1,19 @@
-
-<div class="container">
-  <div class="jumbotron text-center">
-        <h1> WELCOME TO THE BACKSTAGE</h1>
+<div id= "wrapper1">
+  <div class="video-backgroud">
+    <video autoplay muted loop id="myVideo">
+        <source src="images/MOSHED-2018-9-14-15-0-11.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div id="overlay"></div>
+  <div class="container on-top">
+   <div class="title text-center">
+    
+        <h1 > WELCOME TO </h1>
+        <h1 class="title-text">THE BACKSTAGE</h1>
         <p>Login or Register:</p>
-        <a href="/login" class="btn btn-default"> Login</a>
-        <a href="/signup" class="btn btn-default"> Signup</a>
- </div>    
+        <a href="/login" class="btn "> Login</a>
+        <a href="/signup" class="btn "> Signup</a>
+    </div>    
+  </div>
 </div>
-
+<a>Developed by Núria Casas @ Ironhack</a>
