--- a/thebackstage/views/login.ejs
+++ b/thebackstage/views/login.ejs
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="col-sm-6 col-sm-offset-3">
+  <div class="col-sm-6 col-sm-offset-3 container2">
   
     <h1>Login</h1>
   
