--- a/thebackstage/views/profileform.ejs
+++ b/thebackstage/views/profileform.ejs
@@ -1,8 +1,8 @@
 
 <!-- PROFILE FORM -->
 
-<div class="container">
-    <div class="col-sm-6 col-sm-offset-3">
+<div class="container" style="margin-bottom: 100px;">
+    <div class="col-sm-6 col-sm-offset-3 container3">
         <form action="/profile/form/submit" enctype="multipart/form-data" method="POST">
 
             <div class="form-group">
@@ -22,7 +22,7 @@
 
 
             <div id='geocoder' class='geocoder'></div> <br>
-            <div id="map2" style='width: 550px; height: 300px;'></div><br>
+            <div id="map2" style='width: 100%; height: 300px;'></div><br>
             <label>Address</label>
             <textarea type="text" class="form-control" id = "search" name="address" ></textarea><br>
             <label>Region</label>
