--- a/thebackstage/public/stylesheets/style.css
+++ b/thebackstage/public/stylesheets/style.css
@@ -3,3 +3,137 @@
 a {
   color: #00B7FF;
 }
+#wrapper1 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  position: fixed;
+}
+.video-background {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+ 
+}
+#myvideo {
+  object-fit: fill;
+  width: 1000px;
+  position: absolute
+}
+video {
+  
+  width: 100%;
+}
+#overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity:0.5
+}
+.on-top {
+  width: 700px;
+  height: 100%;
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  top: 30%;
+  margin-left: auto; 
+  margin-right: auto;
+
+
+}
+body {
+  padding-top: 0px;
+  background-image:linear-gradient(black, rgb(58, 55, 55));
+  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100%; 
+}
+html {
+  background-image:linear-gradient(rgb(58, 55, 55));
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100%; 
+}
+.title {
+  background-color: black;
+  padding: 40px;
+  opacity: 0.7;
+  color: white;
+  font-size: 20px;
+}
+.title-text {
+  font-size: 70px;
+}
+
+
+.container2 {
+  background-color: white;
+  opacity: 0.9;
+  border-radius: 5px;
+  padding: 60px;
+  margin-top: 15%;
+}
+
+.container3 {
+  background-color: white;
+  opacity: 0.9;
+  border-radius: 5px;
+  padding: 60px;
+  margin-top: 5%;
+}
+
+
+.general-wrapper {
+  margin-left: auto; 
+  margin-right: auto;
+  top: 0px;
+
+  position: relative;
+  width: 1000px;
+  height: 1000px;
+  background-color:rgba(255, 255, 255, 0.9);
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.top-image {
+  position: absolute;
+  top: 0px;
+  
+  
+}
+.profile-wrapper {
+  position: absolute;
+  background-color: white;
+  margin: 40px;
+  top: 5%;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  
+}
+.profile-pic {
+  
+  
+}
+.info-container {
+  background-color: white;
+  padding-top: 5px;
+  padding-left: 30px;
+  padding-bottom: 20px;
+}
+
+.event-wrapper {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+}
