--- a/thebackstage/views/index.ejs
+++ b/thebackstage/views/index.ejs
@@ -17,3 +17,7 @@
   </div>
 </div>
 <a>Developed by Núria Casas @ Ironhack</a>
+<p id="displayName" ></p>
+<p id="eventId"></p>
+<div class="eventWrapper"></div>
+
