--- a/thebackstage/views/layout.ejs
+++ b/thebackstage/views/layout.ejs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
  
 
     <style>
@@ -21,6 +23,7 @@
 
   </body>
   <script src="/javascripts/mapbox.js"></script>
+  <script src="/javascripts/songkick.js"></script>
 </html>
 
 
