--- a/thebackstage/views/lobby.ejs
+++ b/thebackstage/views/lobby.ejs
@@ -1,7 +1,13 @@
 
-<div class="jumbotron text-center">
-    <h1> THE LOBBY </h1>
+
+
+<div class=lobbyWrapper>
     <a href="/logout" class="btn btn-default btn-sm">Logout</a>
     <a href="/profile" class="btn btn-default btn-sm">Profile</a>
+<div class="">
+    <h1 style="color: white"> THE LOBBY </h1>
+</div> 
+<h4 style="color: white"> search for upcoming events :</h4>
+<div id="map2" style='width: 100%; height: 200px;'></div><br>
+<div class="eventWrapper" style="color: white"></div>
 </div>
-<div id="map2" style='width: 100%; height: 600px;'></div><br>
