--- a/thebackstage/views/details.ejs
+++ b/thebackstage/views/details.ejs
@@ -10,17 +10,32 @@
     
   <div class="eventDetailWrapper">
 
-    <h1 id="displayName" style="color: white"></h1>
+    <h1 id="displayName" ></h1>
     <h1>Artist</h1>
     <div class="artists"></div>
-  </div><br>
+  </div>
   <div class="locationWrapper">
     <h1>Location</h1>
+    <div id='map'>
+        <div class='map-overlay-container'>
+            <div class='map-overlay'>
+              
+              
+            </div>
+          </div>
+    </div>
+    
+  
   </div>
 
   <br><div class="url"></div>
+  <div class="join_btn"></div>
 
 </div>
 
+<div id="branding"  style="float: left;"></div><br />
+<div id="content">Loading...</div>
 
 
+
+    
