--- a/thebackstage/views/lobby.ejs
+++ b/thebackstage/views/lobby.ejs
@@ -7,7 +7,7 @@
 <div class="">
     <h1 style="color: white"> THE LOBBY </h1>
 </div> 
-<h4 style="color: white"> search for upcoming events :</h4>
+<h4 style="color: white"> search for upcoming events :</h4><br>
 <div id="map2" style='width: 100%; height: 200px;'></div><br>
 <div class="eventWrapper" style="color: white"></div>
 </div>
