--- a/thebackstage/views/profile.ejs
+++ b/thebackstage/views/profile.ejs
@@ -35,9 +35,9 @@
         </div>
         <div class="event-wrapper">
                 <h3>My Events</h3><br>
-                <%= user.profile.events %>
+                <%= user.events %>
             
-               <% if (user.profile.events.length == 0) { %>
+               <% if (user.events.length == 0) { %>
                   <div class="alert alert-danger"> 
                       You are yet to join an event; Go check some cool events near you 
                       <a href="/lobby" class="btn btn-default btn-sm">Lobby</a> 
