--- a/thebackstage/views/details.ejs
+++ b/thebackstage/views/details.ejs
@@ -2,6 +2,7 @@
     <a style = " padding-left: 20px; padding-right: 20px; margin: 5px; width: 100px" href="/logout" class="btn btn-default btn-sm">Logout</a><br>
     <a style = " padding-left: 20px; padding-right: 20px; margin: 5px; width: 100px"href="/" class="btn btn-default btn-sm">Home</a><br>
     <a style = " padding-left: 20px; padding-right: 20px; margin: 5px; width: 100px"href="/lobby" class="btn btn-default btn-sm">Lobby</a><br>
+    <a style = " padding-left: 20px; padding-right: 20px; margin: 5px; width: 100px"href="/profile" class="btn btn-default btn-sm">Profile</a><br>
 
 </div>
 <p id= "eventid"><%= eventid.eventid %></p>
